corrected some font sizes on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -48,7 +48,7 @@
 
     .lg-heading {
         margin-top: 1rem;
-        font-size: 5rem;
+        font-size: 2.5rem;
         }
     }
     .projects {
